<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.theme.SignupActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:paddingLeft="10dp"
       android:paddingRight="10dp">
       <ImageView
           android:id="@+id/sign_image"
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:src="@drawable/login"
           android:layout_marginTop="150dp"
           android:layout_marginLeft="130dp"/>
       <TextView
           android:id="@+id/tv_login"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/iv_first"
           android:text="@string/tv_signup"
           android:layout_marginTop="30dp"
           android:textStyle="bold"
           android:layout_marginLeft="20dp"
           android:textSize="30dp"
           android:textColor="@color/black"/>
       <androidx.cardview.widget.CardView
           android:id="@+id/cd_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="5dp"
           app:cardCornerRadius="10dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true">
           <EditText
               android:id="@+id/et_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:hint="@string/et_name"
               android:background="@android:color/transparent"
               android:padding="10dp"/>
       </androidx.cardview.widget.CardView>
       <androidx.cardview.widget.CardView
           android:id="@+id/cd_mobile"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="10dp"
           app:cardCornerRadius="10dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true">
           <EditText
               android:id="@+id/et_mobile"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:hint="@string/et_mobile"
               android:background="@android:color/transparent"
               android:padding="10dp"/>
       </androidx.cardview.widget.CardView>
       <androidx.cardview.widget.CardView
           android:id="@+id/cd_pass"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="10dp"
           app:cardCornerRadius="10dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true">
           <EditText
               android:id="@+id/sign_pass"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:hint="@string/sign_pass"
               android:background="@android:color/transparent"
               android:padding="10dp"/>
       </androidx.cardview.widget.CardView>
       <androidx.cardview.widget.CardView
           android:id="@+id/cd_conpass"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="10dp"
           app:cardCornerRadius="10dp"
           app:cardBackgroundColor="@color/white"
           app:cardMaxElevation="12dp"
           app:cardPreventCornerOverlap="true"
           app:cardUseCompatPadding="true">
           <EditText
               android:id="@+id/sign_conpass"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:hint="@string/sign_conpass"
               android:background="@android:color/transparent"
               android:padding="10dp"/>
       </androidx.cardview.widget.CardView>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn_signup"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:layout_marginLeft="140dp"
           android:text="Sign Up"
           android:textSize="15dp"
           android:textColor="@color/black" />
   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>