<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.theme.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/iv_first"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/login"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="150dp"/>
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_first"
            android:text="@string/TV_Login"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:textSize="30dp"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/et_email"
                android:background="@android:color/transparent"
                android:padding="10dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/et_email"
            android:padding="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/et_password"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="140dp"
            android:text="@string/btn_login"
            android:textSize="15dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="5dp"
            android:text="OR"
            android:textColor="#99A3A4"
            android:textSize="20dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            android:padding="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/mail_logo"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Continue with Gmail"
                android:padding="20dp"
                android:textSize="18dp"
                android:layout_marginLeft="70dp"
                android:textColor="@color/black"
                />
            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/next_arrow"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="280dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tv_last"
            android:textColor="#99A3A4"
            android:textSize="18dp"
            android:layout_marginLeft="48dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>